--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Amalik on Github lab
 author: Amalik Amriou
 email: amalik@amalikamriou.com
-theme : Minima
+theme : minima
 description: > # this means to ignore newlines until "baseurl:"
   C'est la description
 
